DOMjudge Programming Contest Judging System

Version 3.0.6 - SVN
-------------------
 - Fix static compilation with GHC.

Version 3.0.5 - 21 December 2010
--------------------------------
 - Fix missing permissions for plugin interface SQL user.
 - Small admin and judge documentation fixes.
 - Do not check scoreboard cache for key integrity; this
   prevents deletion of teams while adding no real value.
 - Add note countdown timer is only shown from activetime.
 - Change sample team ID to avoid conflicts with real teams.
 - Don't count unjudged submissions as unverified for consistency.
 - Set MySQL connection encoding explicitly. Introduces a new option:
   DJ_CHARACTER_SET_MYSQL.

Version 3.0.4 - 22 August 2010
------------------------------
 - Fix Makefile rules for building library objects.
 - Workaround sorttable colspan bug and use stable sorting.
 - Small documentation fixes.
 - Fix expected output for reboot test-source.
 - Don't shorten a team's hostname if it is an IP address.
 - Remove literate Haskell test-source: doesn't compile without extension.

Version 3.0.3 - 11 July 2010
----------------------------
 - Fix bug in handling of libmagic cookie.
 - Fix some HTML escaping issues found with skipfish.
 - Fix CSS link in admin/jury HTML documentation.
 - In chroot-startstop, cope properly with /lib64 being a symlink to
   /lib. Thanks Christoph Dittmann.
 - Fix SQL syntax error in restore_sources2db script.
 - Upgrade included dash shell to version 0.5.5.1-6.
 - Fix swapped error messages in submit client.
 - Correctly handle empty optional diff file argument.
 - Include standard C headers in misc/scanner.h.

Version 3.0.2 - 13 February 2010
--------------------------------
 - Re-fix an incorrect LIBWWWDIR path.
 - Correct presentation error exit code in test_solution.sh.

Version 3.0.1 - 28 January 2010
-------------------------------
 - Many small documentation improvements.
 - Fix include paths when defining custom LIBWWWDIR, LIBJUDGEDIRs.