@@ -3,6 +3,7 @@ DOMjudge Programming Contest Judging System
 Version 3.0.6 - SVN
 -------------------
  - Fix static compilation with GHC.
+ - Use language extension instead of langid in submit_solution().
 
 Version 3.0.5 - 21 December 2010
 --------------------------------
